overflow fix 2

--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   padding-inline: 10vw;
   padding-block: 10vh;
+  overflow: hidden;
 
   h1 {
     font-size: clamp(3.25rem, 10vw, 6.55rem);
@@ -71,7 +72,6 @@
   ul {
     max-width: 400px;
     min-height: 30vh;
-    overflow: hidden;
   }
 
   li {
@@ -144,7 +144,6 @@
       text-align: center;
       text-align: -webkit-center;
       z-index: 2;
-      overflow: hidden;
 
       img {
         width: 100%;
